--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
 accelerate==1.3.0 
+aiohappyeyeballs==2.4.6 
+aiohttp==3.11.12 
+aiosignal==1.3.2 
+attrs==25.1.0 
 certifi==2025.1.31 
 charset-normalizer==3.4.1 
 colorama==0.4.6 
+datasets==3.3.0 
+dill==0.3.7 
+evaluate==0.4.3 
 filelock==3.17.0 
-fsspec==2025.2.0 
+frozenlist==1.5.0 
+fsspec==2024.12.0 
+fsspec[http]==2024.12.0 
 huggingface-hub==0.28.1 
 idna==3.10 
 jinja2==3.1.5 
 markupsafe==3.0.2 
 mpmath==1.3.0 
+multidict==6.1.0 
+multiprocess==0.70.15 
 networkx==3.4.2 
 numpy==2.2.3 
 nvidia-cublas-cu12==12.4.5.8 
@@ -25,12 +36,18 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127 
 nvidia-nvtx-cu12==12.4.127 
 packaging==24.2 
+pandas==2.2.3 
+propcache==0.2.1 
 psutil==7.0.0 
+pyarrow==19.0.0 
+python-dateutil==2.9.0.post0 
+pytz==2025.1 
 pyyaml==6.0.2 
 regex==2024.11.6 
 requests==2.32.3 
 safetensors==0.5.2 
 setuptools==75.8.0 
+six==1.17.0 
 sympy==1.13.1 
 tokenizers==0.21.0 
 torch==2.6.0 
@@ -38,4 +55,7 @@ tqdm==4.67.1
 transformers==4.48.3 
 triton==3.2.0 
 typing-extensions==4.12.2 
+tzdata==2025.1 
 urllib3==2.3.0 
+xxhash==3.5.0 
+yarl==1.18.3 
