--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,9 @@ dependencies = [
   "torch (>=2.6.0,<3.0.0)",
   "transformers (>=4.48.3,<5.0.0)",
   "accelerate (>=1.3.0,<2.0.0)",
-  "evaluate (>=0.4.3,<0.5.0)",
+  "evaluate[evaluator] (>=0.4.3,<0.5.0)",
   "datasets (>=3.3.0,<4.0.0)",
+  "pytest (>=8.3.4,<9.0.0)",
 ]
 
 
