--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,14 @@ charset-normalizer==3.4.1
 colorama==0.4.6 
 datasets==3.3.0 
 dill==0.3.7 
-evaluate==0.4.3 
+evaluate[evaluator]==0.4.3 
 filelock==3.17.0 
 frozenlist==1.5.0 
 fsspec==2024.12.0 
 fsspec[http]==2024.12.0 
 huggingface-hub==0.28.1 
 idna==3.10 
+iniconfig==2.0.0 
 jinja2==3.1.5 
 markupsafe==3.0.2 
 mpmath==1.3.0 
@@ -37,15 +38,18 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127 
 packaging==24.2 
 pandas==2.2.3 
+pluggy==1.5.0 
 propcache==0.2.1 
 psutil==7.0.0 
 pyarrow==19.0.0 
+pytest==8.3.4 
 python-dateutil==2.9.0.post0 
 pytz==2025.1 
 pyyaml==6.0.2 
 regex==2024.11.6 
 requests==2.32.3 
 safetensors==0.5.2 
+scipy==1.15.2 
 setuptools==75.8.0 
 six==1.17.0 
 sympy==1.13.1 
