--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,22 @@ accelerate==1.3.0
 aiohappyeyeballs==2.4.6 
 aiohttp==3.11.12 
 aiosignal==1.3.2 
+annotated-types==0.7.0 
 attrs==25.1.0 
 certifi==2025.1.31 
 charset-normalizer==3.4.1 
+click==8.1.8 
 colorama==0.4.6 
 datasets==3.3.0 
 dill==0.3.7 
+docker-pycreds==0.4.0 
 evaluate[evaluator]==0.4.3 
 filelock==3.17.0 
 frozenlist==1.5.0 
 fsspec==2024.12.0 
 fsspec[http]==2024.12.0 
+gitdb==4.0.12 
+gitpython==3.1.44 
 huggingface-hub==0.28.1 
 idna==3.10 
 iniconfig==2.0.0 
@@ -38,10 +43,14 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127 
 packaging==24.2 
 pandas==2.2.3 
+platformdirs==4.3.6 
 pluggy==1.5.0 
 propcache==0.2.1 
+protobuf==5.29.3 
 psutil==7.0.0 
 pyarrow==19.0.0 
+pydantic-core==2.27.2 
+pydantic==2.10.6 
 pytest==8.3.4 
 python-dateutil==2.9.0.post0 
 pytz==2025.1 
@@ -50,8 +59,11 @@ regex==2024.11.6
 requests==2.32.3 
 safetensors==0.5.2 
 scipy==1.15.2 
+sentry-sdk==2.22.0 
+setproctitle==1.3.4 
 setuptools==75.8.0 
 six==1.17.0 
+smmap==5.0.2 
 sympy==1.13.1 
 tokenizers==0.21.0 
 torch==2.6.0 
@@ -61,5 +73,6 @@ triton==3.2.0
 typing-extensions==4.12.2 
 tzdata==2025.1 
 urllib3==2.3.0 
+wandb==0.19.6 
 xxhash==3.5.0 
 yarl==1.18.3 
