--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "datasets (>=3.3.0,<4.0.0)",
   "pytest (>=8.3.4,<9.0.0)",
   "wandb (>=0.19.6,<0.20.0)",
+  "peft (>=0.14.0,<0.15.0)",
 ]
 
 
