--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127 
 packaging==24.2 
 pandas==2.2.3 
+peft==0.14.0 
 platformdirs==4.3.6 
 pluggy==1.5.0 
 propcache==0.2.1 
