add config file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "pytest (>=8.3.4,<9.0.0)",
   "wandb (>=0.19.6,<0.20.0)",
   "peft (>=0.14.0,<0.15.0)",
+  "pyyaml (>=6.0.2,<7.0.0)",
 ]
 
 
