--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,7 @@
-batch_size: 8
+batch_size: 2
 epochs: 3
 train_split: "train[:100]"
 eval_split: "validation[:100]"
 gradient_accumulation_steps: 4
+model_id: "meta-llama/Llama-3.2-1B"
+save_total_limit: 1
